tests/baselines/reference/switchAssignmentCompat.errors.txt
==== tests/cases/compiler/switchAssignmentCompat.ts (1 errors) ====
    class Foo { }
    
    switch (0) {
        case Foo: break; // Error expected
             ~~~
!!! switchAssignmentCompat.ts(4,10): error TS2012: Cannot convert 'typeof Foo' to 'number':
!!! 	Type 'Number' is missing property 'prototype' from type 'typeof Foo'.
    }
    